Initial commit: HrishikaTech site first version

--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+
             </ul>
         </nav>
     </header>
@@ -22,8 +19,15 @@
     <!-- Home Section -->
     <section id="home">
         <h1>Hi, I'm Hrishika</h1>
-        <p>A Data Analyst with a passion for technology, emotional wellness, and empowering others through smart solutions.</p>
+        <p>A Business Intelligence Specialist with a passion for technology, emotional wellness, and empowering others through smart solutions.</p>
     </section>
+<!-- My Story Section -->
+<section id="story">
+  <h2>My Story</h2>
+  <p>
+    From navigating tough personal challenges to rebuilding my career in a new country, my journey reflects grit, growth, and resilience. I’ve transitioned from self-doubt to self-mastery — now committed to tech, emotional wellness, and uplifting others through real stories and innovation.
+  </p>
+</section>
 
     <!-- About Me Section -->
     <section id="about">
@@ -48,14 +52,16 @@
     <!-- Contact Section -->
     <section id="contact">
         <h2>Contact Me</h2>
-        <p>Email: hrishika.murthy1211@gmail.com</p>
-        <p>LinkedIn: <a href="https://linkedin.com/in/hrishika-murthy">hrishika-murthy</a></p>
-    </section>
+  <!-- Footer -->
+<footer>
+  <p>&copy; 2025 Pesapati Hrishika Murthy </p>
+</footer>
 
-    <!-- Footer -->
-    <footer>
-        <p>&copy; 2025 Hrishika Murthy Pesapati</p>
-    </footer>
+<!-- Profile Picture Section -->
+<div class="profile-container">
+  <img src="assets/hrishika-profile.jpg" alt="Hrishika Murthy" class="profile-pic">
+</div>
 
-</body>
-</html>
+<footer>
+  <p>&copy; 2025 Hrishika Murthy Pesapati</p>
+</footer>
