Updated Contact section CSS and content

--- a/index.html
+++ b/index.html
@@ -30,38 +30,54 @@
 </section>
 
     <!-- About Me Section -->
-    <section id="about">
-        <h2>About Me</h2>
-        <p>After overcoming personal challenges and working through diverse experiences in tech, I’m now focused on creating powerful solutions at the intersection of **data** and **well-being**. I specialize in Power BI, SQL, DAX, and beyond.</p>
-    </section>
+<section id="about">
+  <h2>About Me</h2>
+  <p>I’m Hrishika Murthy — a passionate Business Intelligence specialist with a vision to lead through data, innovation, and emotional intelligence. I bridge the gap between raw data and real-world impact by designing intelligent dashboards, optimizing decision-making processes, and delivering insights that drive business strategy.</p>
+  <p>With a background rooted in resilience and a mindset shaped by tech, I thrive in fast-paced environments where data meets purpose. Currently building high-impact projects using Power BI, SQL, and strategic storytelling — all with the goal of evolving into a tech leader who empowers teams and builds meaningful digital solutions.</p>
+</section>
 
-    <!-- Projects Section -->
-    <section id="projects">
-        <h2>My Projects</h2>
-        <div class="project">
-            <h3>Project 1: Scottish Water</h3>
-            <p>A multi-tool Power BI project showcasing customer analysis and insights.</p>
-        </div>
-        <div class="project">
-            <h3>Project 2: Aircel</h3>
-            <p>A deep-dive into business data with visual storytelling using Power BI.</p>
-        </div>
-        <!-- Add more projects here -->
-    </section>
 
-    <!-- Contact Section -->
-    <section id="contact">
-        <h2>Contact Me</h2>
-  <!-- Footer -->
+   <section id="projects">
+  <h2>My Projects</h2>
+
+  <div class="project">
+    <img src="assets/scottishwater-logo.png" alt="Scottish Water Logo" class="project-logo" />
+    <h3>Scottish Water</h3>
+    <p>A multi-tool Power BI project showcasing customer analysis and insights.</p>
+  </div>
+
+ <img src="assets/aircel-logo.png" alt="Aircel Logo" class="project-logo" />
+
+    <p>A deep dive into business data with visual storytelling using Power BI.</p>
+  </div>
+
+  <div class="project">
+    <img src="assets/nextgen-logo.png" alt="Nextgen Logo" class="project-logo" />
+    <h3>Nextgen</h3>
+    <p>Led a product-focused dashboard initiative, driving agile project execution across teams.</p>
+  </div>
+
+  <div class="project">
+    <img src="assets/cbase-logo.png" alt="CBase Logo" class="project-logo" />
+    <h3>CBase</h3>
+    <p>AI-powered wellness dashboard built with Python, Power BI & UX-focused strategy.</p>
+  </div>
+
+</section>
+
+<section id="contact">
+  <h2>Contact Me</h2>
+  <p>If you'd like to collaborate, connect, or just say hi — feel free to email me at:</p>
+  <p><a href="mailto:contact@hrishikatech.com">contact@hrishikatech.com</a></p>
+</section>
+
 <footer>
-  <p>&copy; 2025 Pesapati Hrishika Murthy </p>
-</footer>
 
 <!-- Profile Picture Section -->
 <div class="profile-container">
   <img src="assets/hrishika-profile.jpg" alt="Hrishika Murthy" class="profile-pic">
 </div>
 
-<footer>
-  <p>&copy; 2025 Hrishika Murthy Pesapati</p>
-</footer>
+<p>© 2025 Hrishika Murthy Pesapati</p>
+
+
